Factorias, seeders e implementacion de funciones nuevas en los controladores Habitacion y hotel
