# app/Http/Requests/Habitacion/BulkStoreRequest.php
@@ -1,0 +1,42 @@
+<?php
+
+namespace App\Http\Requests\Habitacion;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Response;
+use Illuminate\Validation\ValidationException;
+
+class BulkStoreRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'habitaciones' => 'required|array',
+            'habitaciones.*.numero' => 'required|string',
+            'habitaciones.*.tipo' => 'required|string',
+            'habitaciones.*.precioNoche' => 'required|numeric',
+            'habitaciones.*.hotel_id' => 'required|exists:hoteles,id',
+        ];
+    }
+
+    public function failedValidation(\Illuminate\Contracts\Validation\Validator $validator)
+    {
+        if ($this->expectsJson()) {
+            $response = new Response($validator->errors(), 400);
+            throw new ValidationException($validator, $response);
+        }
+    }
+}
